@@ -1,6 +1,8 @@
 #ifndef DEF_CONFIG
 #define DEF_CONFIG
 
+#include "k-arbre.h"
+
 /* GLOBALS VARS */
 player p1;
 keyTab kTab;
@@ -8,11 +10,16 @@ keyTab kTab;
 int lastMoment;
 int deltaMoment;
 /* Calcul des FPS */
-float sumMoments;
-float samplesMoments;
+int sumMoments;
+int samplesMoments;
 /* "Carte" des obstacles */
 char map[G_WIDTH][G_HEIGHT];
+karbre mapTree;
 /* Coordonnée de l'arrivée */
 int exit_x;
+/* hauteur de la caméra */
+float cam_height;
+/* Portée de la vision */
+float cam_range;
 
 #endif
